# law_ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  law_fetch.py  plan.md  pyproject.toml  requirements.txt
.supatest/: SUPATEST.md
docker/init-scripts/: restore-from-backup.sh
docs/: ARCHITECTURE.md  DATABASE_AUTO_RESTORE.md  DATABASE_BACKUP.md  EMBEDDING_COMPARISON.md  JURISDICTION_DESIGN.md  PHASE1_PLAN.md  QUICKSTART.md  plan.md
lawbot/: __init__.py  __main__.py
lawbot/cli/: __init__.py  chat.py  config.py  db_backup.py  llm.py  main.py  search.py  session.py  setup.py  themes.py  tui.py
scripts/: analyze_document_sizes.py  backup_example.sh  generate_embeddings.py  ingest.py  init_db.py  search.py  stats.py
