[project]
name = "law-ai"
version = "0.1.0"
description = "Fetch Georgia legal sources (state code, appellate opinions, Gwinnett County ordinances) into JSONL for search"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "beautifulsoup4>=4.12.0",
    "pypdf>=4.0.0",
    "striprtf>=0.0.26",
]

[project.scripts]
law-fetch = "law_fetch:main"
